--- a/templates/fantasyleague/competition.html
+++ b/templates/fantasyleague/competition.html
@@ -98,6 +98,13 @@
                   :disable="state.team.length < 14"
                   class="q-mt-md"
                 ></q-btn>
+                <q-btn
+                  v-if="!state.hasTeam"
+                  color="primary"
+                  label="Auto-fill"
+                  @click="pickRandomTeam"
+                  class="q-mt-md"
+                ></q-btn>
               </div>
             </div>
           </q-card-section>
@@ -123,8 +130,8 @@
           <div class="q-pa-md">
             <q-table
               title="Leader Board"
-              :data="board"
-              :columns="boardColumns"
+              :data="leaderBoard"
+              :columns="boardColumns.columns"
               row-key="name"
             >
               <template v-slot:body-cell="props">
